qualia_derive/tests/compile-fail/only-named-fields.rs
extern crate qualia_derive;
use qualia_derive::ObjectShape;

#[derive(ObjectShape)]
struct Foo();

#[derive(ObjectShape)]
struct Foo2;

fn main() {}
