qualia_derive/tests/compile-fail/only-named-fields.stderr
error: Can only derive ObjectType from a struct with named fields
 --> $DIR/only-named-fields.rs:5:11
  |
5 | struct Foo();
  |           ^^

error: Can only derive ObjectType from a struct with named fields
 --> $DIR/only-named-fields.rs:8:12
  |
8 | struct Foo2;
  |            ^
